# analyse_interviews

./: .env.example  .gitignore  README.md  db.py  generate_graphs.py  main.py  prepare_data.py  prompt.py  pyproject.toml  resultats_da2171bc-998a-4413-8cc6-3310ca1e8673.md  resultats_fc7c273d-6f6b-436a-b274-d92dc0b21e47.md  results.py
data/: Entretien Adrien.docx  Entretien Catherine Franken.docx  Entretien Quentin Douhard.docx  Entretien Roman Couchard.docx  Entretien Sylvain Léonis.docx
data/cleaned/: Entretien Adrien.docx  Entretien Catherine Franken.docx  Entretien Quentin Douhard.docx  Entretien Roman Couchard.docx  Entretien Sylvain Léonis.docx
graphs/: combined_llmq_graph.py  high_llmq_histogram.py
llm/: llm_implementations.py  llm_interface.py
results/: resultats_10_20240811_023359.md  resultats_10_20240811_025344.md  resultats_10_20240811_031404.md  resultats_10_20240811_032612.md  resultats_11_20240811_033325.md  resultats_14_20240811_041045.md  resultats_15_20240811_211515.md  resultats_16_20240811_234516.md  resultats_17_20240812_215406.md  resultats_1_20240810_052556.md  resultats_1_20240810_053133.md  resultats_1_20240810_054648.md  resultats_1_20240810_054712.md  resultats_2_20240810_054012.md  resultats_2_20240810_054558.md  resultats_2_20240810_145156.md  resultats_36255b1b-dc58-47c3-9389-db4b90813b96.md  resultats_3_20240810_230445.md  resultats_6_20240811_001544.md  resultats_7_20240811_013137.md  resultats_8_20240811_014402.md  resultats_933c475e-156f-4d89-b968-0451fb804c27.md  resultats_9_20240811_022345.md  resultats_9_20240811_023447.md
(+5 files in other folders)
